[package]
name = "gravity-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui_plot = "0.29.0"
image = "0.25.5"
itertools = "0.13.0"
nalgebra = "0.33.2"
nalgebra-lapack = { version = "0.25.0", default-features = false, features = ["accelerate"] }
rand = "0.9.0"
uiua = { version = "*", default-features = false, features = ["native_sys"] }
